header z-index fix

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
     position: fixed;
     top: 0;
+    z-index: 5;
 }
 
 .links-container {
